deploy/argocd/apps/prometheus-stack/kustomize/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: istio-gateway-monitoring-tls
  namespace: monitoring
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: istio-system
  to:
  - group: ""
    kind: Secret
    # Allow all 3 TLS secrets in monitoring namespace
    # prometheus-cert-tls, grafana-cert-tls, alertmanager-cert-tls
