deploy/argocd/apps/prometheus-stack/kustomize/alertmanager-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    # cert-manager will create alertmanager-cert-tls secret in monitoring
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
    kind: Gateway
    sectionName: https
  hostnames:
  - "alertmanager.gigix"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-stack-kube-prom-alertmanager
      port: 9093
