deploy/argocd/apps/prometheus-stack/kustomize/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    # cert-manager will create grafana-cert-tls secret in monitoring
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
    kind: Gateway
    sectionName: https
  hostnames:
  - "grafana.gigix"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-stack-grafana
      port: 80
