deploy/argocd/apps/prometheus-stack/kustomize/prometheus-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    # cert-manager will create prometheus-cert-tls secret in monitoring
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
    kind: Gateway
    sectionName: https
  hostnames:
  - "prometheus.gigix"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-stack-kube-prom-prometheus
      port: 9090
